--- a/assets/style.css
+++ b/assets/style.css
@@ -77,7 +77,7 @@ html {
 }
 
 body {
-  font-family: Arial, sans-serif;
+  font-family: Roboto, sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
 }
@@ -298,7 +298,7 @@ section.apresentacao h2 .destaque {
         rgba(0, 0, 0, 0.5),
         rgba(0, 0, 0, 0)
       ),
-      url("../img/fundo-codigo.png");
+      url("./img/fundo-codigo.png");
   }
   section.apresentacao h2 .destaque {
     font-size: 3.2rem;
